--- a/css/master.css
+++ b/css/master.css
@@ -8,18 +8,22 @@
 
 /* SPECIFIC RULES */
 
-section{
-  width: 100%;
+.city{
   height: 100vh;
-  background-image: url('https://wallpaperaccess.com/full/4581879.jpg');
   background-size: cover;
-
+  border-radius: 10px;
 }
+
+#rome{
+  background-image: url('https://wallpaperaccess.com/full/4581879.jpg');
+}
+
 
 .layover{
   width: 100%;
   height: 100%;
   background-color: #0009;
+  border-radius: 10px;
   position: absolute;
   top: 0;
   left: 0;
@@ -27,22 +31,27 @@ section{
 
 .background{
   width: 500px;
-  height: 300px;
+  height: 250px;
   background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 5px;
+  border-radius: 2.5px;
+  position: relative;
+}
+
+.city-name{
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 150px;
+  font-weight: 700;
+
+  display: inline-block;
+}
+
+.background,.city-name{
   position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.city-name{
-  font-family: 'Bebas Neue', cursive;
-  font-size: 200px;
-  font-weight: 800;
-  display: inline-block;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.city-name:hover{
+  text-shadow: 3px 3px lightblue;
 }
