--- a/css/master.css
+++ b/css/master.css
@@ -3,7 +3,7 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 /* SPECIFIC RULES */
@@ -12,16 +12,24 @@
   height: 100vh;
   background-size: cover;
   border-radius: 10px;
+  position: relative;
 }
 
 #rome{
   background-image: url('https://wallpaperaccess.com/full/4581879.jpg');
 }
 
+#london{
+  background-image: url('https://lustermagazine.com/wp-content/uploads/2016/07/wallpaper-london-landscape.jpg');
+}
+
+#tokyo{
+  background-image: url('https://39ag5r37ej175g8ao209xw3t-wpengine.netdna-ssl.com/wp-content/uploads/2019/06/Japan-tokyo-skyline-landscape-japan-tours-travel.jpg');
+}
 
 .layover{
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #0009;
   border-radius: 10px;
   position: absolute;
@@ -30,11 +38,12 @@
 }
 
 .background{
-  width: 500px;
   height: 250px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 2.5px;
+  display: inline-block;
   position: relative;
+  padding: 0 80px;
 }
 
 .city-name{
