--- a/css/master.css
+++ b/css/master.css
@@ -13,8 +13,10 @@
   background-size: cover;
   border-radius: 10px;
   position: relative;
+  margin: 10px;
 }
 
+  /* city imgs */
 #rome{
   background-image: url('https://wallpaperaccess.com/full/4581879.jpg');
 }
@@ -50,7 +52,6 @@
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 150px;
   font-weight: 700;
-
   display: inline-block;
 }
 
@@ -61,6 +62,6 @@
   transform: translate(-50%, -50%);
 }
 
-.city-name:hover{
-  text-shadow: 3px 3px lightblue;
+.background:hover{
+  text-shadow: 6px 6px lightblue;
 }
